feat: 引入apache-common-cli优化参数校验