@@ -1,5 +1,7 @@
 package com.endpoint.rasp.engine;
 
+import com.endpoint.rasp.common.AnsiLog;
+
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.HashMap;
@@ -15,11 +17,14 @@ public class ArgsHashMap extends HashMap<String, String> {
 
     public static final String AGENT = "-agent";
     public static final String CORE = "-core";
+    public static final String PID = "-pid";
+    public static final String UTF_8 = "utf-8";
 
     public ArgsHashMap(int initialCapacity) {
         super(initialCapacity);
     }
 
+    //下面两个方法，应该是有用的，但是不用好像没什么毛病
     public void setAgentPath() {
         this.put(AGENT, encodeArg(this.get(AGENT)));
     }
@@ -30,7 +35,7 @@ public class ArgsHashMap extends HashMap<String, String> {
 
     private static String encodeArg(String arg) {
         try {
-            return URLEncoder.encode(arg, "utf-8");
+            return URLEncoder.encode(arg, UTF_8);
         } catch (UnsupportedEncodingException e) {
             return arg;
         }
@@ -44,10 +49,15 @@ public class ArgsHashMap extends HashMap<String, String> {
         return this.get(CORE);
     }
 
-    public  void printSelf(){
+    public void printSelf() {
+        AnsiLog.info("in core.jar,use these options:");
         Set<Entry<String, String>> entries = this.entrySet();
         for (Entry<String, String> entry : entries) {
-            System.out.println(entry.getKey() + ": " + entry.getValue());
+            AnsiLog.info(entry.getKey() + ": " + entry.getValue());
         }
+    }
+
+    public String getPid() {
+        return this.get(PID);
     }
 }
